css/faq.css
#faq {
    max-width: 800px;
    margin: auto;
    padding: 40px 15px;
    text-align: center;
}

section.faq {
    /* padding-top: 2em; */
    padding-bottom: 3em;
}

#faq ul {
    text-align: left;
}

.faq-heading {
    font-family: 'Work Sans', sans-serif;
    margin-top: 0;
    color: #fff;
    z-index: 80;
}

.transition,
p,
ul li i:before,
ul li i:after {
    transition: all 0.3s;
}

#faq .no-select,
#faq h2 {
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
    user-select: none;
}

#faq h1 {
    color: rgb(33, 37, 41);
    margin-bottom: 30px;
    margin-top: 0;
}

#faq h2 {
    color: #E007B7;
    font-family: 'hm_light', sans-serif;
    font-size: 20px;
    line-height: 34px;
    text-align: left;
    padding: 15px 15px 0;
    text-transform: none;
    font-weight: 300;
    letter-spacing: 1px;
    display: block;
    margin: 0;
    cursor: pointer;
    transition: .2s;
}

#faq p {
    color: rgb(33, 37, 41);
    text-align: left;
    font-family: 'hm_light', sans-serif;
    font-size: 14px;
    line-height: 1.45;
    position: relative;
    overflow: hidden;
    max-height: 250px;
    will-change: max-height;
    contain: layout;
    display: inline-block;
    opacity: 1;
    transform: translate(0, 0);
    margin-top: 5px;
    margin-bottom: 15px;
    padding: 0 50px 0 15px;
    transition: .3s opacity, .6s max-height;
    hyphens: auto;
    z-index: 2;
}

#faq ul {
    list-style: none;
    perspective: 900;
    padding: 0;
    margin: 0;
}

#faq ul li {
    position: relative;
    overflow: hidden;
    padding: 0;
    margin: 0;
    /*padding-bottom: 4px;*/
    /*padding-top: 18px;*/
    background: #fff;
    /* box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px; */
    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
    -webkit-tap-highlight-color: transparent;
}

#faq ul li+li {
    margin-top: 15px;
}

#faq ul li:last-of-type {
    padding-bottom: 0;
}

#faq ul li i {
    position: absolute;
    transform: translate(-6px, 0);
    margin-top: 28px;
    right: 15px;
}

#faq ul li i:before,
ul li i:after {
    content: "";
    position: absolute;
    background-color: #E007B7;
    width: 3px;
    height: 9px;
}

#faq ul li i:before {
    transform: translate(-2px, 0) rotate(45deg);
}

#faq ul li i:after {
    transform: translate(2px, 0) rotate(-45deg);
}

#faq ul li input[type=checkbox] {
    position: absolute;
    cursor: pointer;
    width: 100%;
    height: 100%;
    z-index: 1;
    opacity: 0;
    touch-action: manipulation;
}

#faq ul li input[type=checkbox]:checked~h2 {
    color: rgb(33, 37, 41);
}

#faq ul li input[type=checkbox]:checked~p {
    /*margin-top: 0;*/
    max-height: 0;
    transition: .3s;
    opacity: 0;
    /*transform: translate(0, 50%);*/
}

#faq ul li input[type=checkbox]:checked~i:before {
    transform: translate(2px, 0) rotate(45deg);
}

#faq ul li input[type=checkbox]:checked~i:after {
    transform: translate(-2px, 0) rotate(-45deg);
}

